<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:rowOrderPreserved="false">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="[INVESTOR_NAME]"
            android:id="@+id/investorName"
            android:layout_row="0"
            android:layout_column="1"
            android:gravity="center_horizontal" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="1"
            android:orientation="horizontal"
            android:weightSum="3"
            android:layout_marginTop="40dp">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/company1"
                android:id="@+id/company1"
                android:layout_weight="1"
                android:typeface="monospace" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/company2"
                android:id="@+id/company2"
                android:layout_weight="1"
                android:typeface="monospace" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/company3"
                android:id="@+id/company3"
                android:layout_weight="1"
                android:typeface="monospace" />
        </RadioGroup>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="1"
            android:orientation="horizontal"
            android:weightSum="3"
            android:layout_marginTop="40dp">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/buy"
                android:id="@+id/buy"
                android:layout_weight="1"
                android:typeface="monospace" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sell"
                android:id="@+id/sell"
                android:layout_weight="1"
                android:typeface="monospace" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/portfolio"
                android:id="@+id/portfolio"
                android:layout_weight="1"
                android:typeface="monospace" />
        </RadioGroup>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_row="3"
            android:layout_column="1"
            android:weightSum="2"
            android:layout_marginTop="40dp">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/exit"
                android:id="@+id/exitButton"
                android:layout_weight="1" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/doTransaction"
                android:id="@+id/doTransaction"
                android:layout_weight="1" />
        </LinearLayout>

    </GridLayout>
</RelativeLayout>