<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/labelTextView"
        android:id="@+id/labelTextView"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:textStyle="bold"
        android:textIsSelectable="true"
        android:textSize="20sp"
        android:visibility="invisible"
        android:singleLine="false" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exit"
        android:id="@+id/exitButton"
        android:layout_marginTop="127dp"
        android:layout_below="@+id/investorsTextView"
        android:visibility="invisible"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="false"
        android:layout_toStartOf="@+id/investorsTextView" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/continueButton"
        android:id="@+id/continueButton"
        android:layout_alignTop="@+id/exitButton"
        android:visibility="invisible"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="false"
        android:layout_toEndOf="@+id/exitButton"
        android:layout_toRightOf="@+id/exitButton" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/investorsTextView"
        android:layout_marginTop="79dp"
        android:textSize="20sp"
        android:layout_below="@+id/labelTextView"
        android:layout_centerHorizontal="true" />
</RelativeLayout>